# icssc-discord-bot

./: .env.example  .gitignore  Cargo.toml  README.md  RULES.md  diesel.toml  dump_db.sh  nixpacks.toml
.github/workflows/: check.yml
entity/: Cargo.toml
entity/src/entities/: matchy_meetup_opt_in.rs  matchy_meetup_pair.rs  matchy_meetup_pair_member.rs  matchy_meetup_round.rs  message.rs  mod.rs  opt_out.rs  prelude.rs  server_calendar.rs  server_event.rs  snipe.rs  snipe_opt_out.rs  spotting_message.rs  spotting_victim.rs  user_stat.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250905_213900_matchy_history.rs  m20250916_174534_social_spottings.rs  m20250923_231905_matchy_opt_in.rs  m20250925_083518_matchy_pair_cols.rs  m20250926_214250_stats_with_socials.rs  m20250930_012439_calendar_events.rs  m20251003_231509_calendar_indexes.rs  m20251013_031245_message_on_delete_cascade.rs  m20260112_055632_modernize_table_names.rs  m20260223_234418_change_social_multiplier_mview.rs
migrations/2025-02-05-025208_create_snipes/: down.sql  up.sql
migrations/2025-02-08-072849_derive_message_time/: down.sql  up.sql
migrations/2025-02-11-021618_opt_out_table/: down.sql  up.sql
migrations/2025-02-12-021849_user_stat/: down.sql  up.sql
src/: handler.rs  main.rs  matching.rs  matchy-main.rs  model.rs  schema.rs  server.rs  setup.rs
src/attendance/: attended.rs  checkin.rs  mod.rs  roster_helpers.rs
src/bitsnbytes/: meetup.rs  mod.rs
src/commands/: leaderboard.rs  meta.rs  mod.rs  privacy.rs  snipe.rs
src/internal_commands/: calendar.rs  mod.rs
src/matchy/: command.rs  create_pairing.rs  discord_helpers.rs  dump_pairings.rs  helpers.rs  matching.rs  mod.rs  opt_in.rs  participation.rs  send_pairing.rs
src/meta/: ping.rs
src/roster/: command.rs  desynced.rs  mod.rs  user_lookup.rs
src/routes/: calendar.rs  mod.rs  oauth.rs  webhook.rs
src/shortlink/: check.rs  command.rs  create.rs  mod.rs
src/spottings/: check_victim.rs  command.rs  leaderboard.rs  log.rs  meta.rs  mod.rs  privacy.rs  snipe.rs  socials_role.rs  util.rs
src/util/: calendar.rs  gdrive.rs  gforms.rs  gsheets.rs  message.rs  mod.rs  modal.rs  oauth.rs  paginate.rs  roster.rs  text.rs
