[package]
name = "icssc-discord-bot"
version = "1.0.0"
edition = "2024"
rust-version = "1.90.0"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo"] }
discord-md = "3.0.0"
dotenv = "0.15.0"
env_vars_struct = { git = "https://github.com/laggycomputer/env_vars_struct" }
itertools = "0.14.0"
petgraph = "0.8.3"
pluralizer = "0.5.0"
poise = "0.6.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-chrono"] }
serenity = { version = "0.12.4", features = ["full"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
entity = { path = "entity" }
migration = { path = "migration" }
serde = "1.0.228"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
actix-web = "4.12.1"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
serde_json = "1.0.145"

[profile.release]
lto = "fat"
