[package]
name = "icssc-discord-bot"
version = "1.0.0"
edition = "2024"
rust-version = "1.92.0"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["cargo"] }
discord-md = "3.0.0"
dotenvy = "0.15.7"
entity = { path = "entity" }
env_vars_struct = { git = "https://github.com/laggycomputer/env_vars_struct" }
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
migration = { path = "migration" }
petgraph = "0.8.3"
pluralizer = "0.5.0"
poise = "0.6.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.13.1", features = ["form", "json", "query"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-chrono"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["full"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.19.0", features = ["v4"] }

[lints.rust]
redundant_semicolons = "deny"
[lints.clippy]
allow_attributes = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
cfg_not_test = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
doc_broken_link = "deny"
doc_link_with_quotes = "warn"
elidable_lifetime_names = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
enum_glob_use = "warn"
error_impl_error = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "deny"
fn_to_numeric_cast_any = "warn"
format_collect = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
impl_trait_in_params = "deny"
implicit_clone = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
redundant_closure_for_method_calls = "warn"
single_char_pattern = "warn"
unnecessary_semicolon = "warn"
unused_trait_names = "deny"